WIP spacing // fixed re-render bug

--- a/client/src/Chat/Chat.scss
+++ b/client/src/Chat/Chat.scss
@@ -2,25 +2,27 @@
 
 .chat-container {
   display: flex;
-  width: 100%;
   padding:0;
   overflow: hidden;
   height: 100%;
+  margin: 1em;
+  border-radius: 8px;
   min-height: 100vh;
   flex-flow: column;
   align-items: flex-start;
-  background-color: $colour-white;
+  background-color: $background;
+  width: 70%;
 }
 
 .chat-bar {
   position: fixed;
-  bottom: 0;
+  bottom: 10px;
   padding: 10px;
   background: $colour-accent;
-  width: 100%;
   display: flex;
   box-shadow: $shadow;
   align-items: center;
+  width: 70%;
 
   & .chat-bar-heading {
     color: $colour-secondary;
